hw sukkot